force-app/main/default/objects/TASKRAY__trBaseline_Project__c/TASKRAY__trBaseline_Project__c.object-meta.xml
<CustomObject>
    <description>This is a TaskRay object used to store historical snapshot information on TaskRay Projects.</description>
    <label>TaskRay Baseline</label>
    <nameField>
        <label>Baseline Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TaskRay Baselines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>