force-app/main/default/objects/TASKRAY__trBaseline_Project__c/fields/TASKRAY__Project_End__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__Project_End__c</fullName>
    <label>Estimated End Date</label>
    <type>Date</type>
</CustomField>