force-app/main/default/objects/TASKRAY__trBaseline_Project__c/fields/TASKRAY__Project_Start__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__Project_Start__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>