force-app/main/default/objects/TASKRAY__trBaseline_Project__c/fields/TASKRAY__Status__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Archived</label>
    <type>Checkbox</type>
</CustomField>