force-app/main/default/objects/TASKRAY__trBaseline_Project__c/fields/TASKRAY__trActualCompletionDate__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trActualCompletionDate__c</fullName>
    <description>Date of when the project is completed. Works in conjunction with the Completed checkbox field.</description>
    <inlineHelpText>Date of when the project was completed.</inlineHelpText>
    <label>Actual Completion Date</label>
    <type>Date</type>
</CustomField>