force-app/main/default/objects/TASKRAY__trBaseline_Project__c/fields/TASKRAY__trCompleted__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trCompleted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether a project is complete. Works in conjunction with the Actual Completion Date field to determine the duration of the project.</description>
    <inlineHelpText>Indicates whether a project is complete.</inlineHelpText>
    <label>Completed</label>
    <type>Checkbox</type>
</CustomField>