force-app/main/default/objects/TASKRAY__trBaseline_Project__c/fields/TASKRAY__trDesiredOutcomes__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trDesiredOutcomes__c</fullName>
    <description>A customer&apos;s desired outcome(s) for their onboarding process. Can be populated from the Desired Outcomes field on Opportunity.</description>
    <inlineHelpText>Use this field to capture a customer&apos;s desired outcome(s) for their onboarding process. Can be populated from the Desired Outcomes field on Opportunity.</inlineHelpText>
    <label>Desired Outcomes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>