force-app/main/default/objects/TASKRAY__trBaseline_Project__c/fields/TASKRAY__trInitialProjectedDuration__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trInitialProjectedDuration__c</fullName>
    <description>This is a “behind the scenes” field that is used to track the number of days between the project Start Date and the project Initial Projected Completion Date.</description>
    <inlineHelpText>“Behind the scenes” field. This is the duration of the project as it was initially projected.</inlineHelpText>
    <label>Initial Projected Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>