force-app/main/default/objects/TASKRAY__trBaseline_Project__c/fields/TASKRAY__trLongName__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trLongName__c</fullName>
    <formula>$Label.taskray__taskray_baseline_longname_prefix +&quot; &quot;+ TEXT(DATEVALUE(CreatedDate))+&quot;: &quot;+ TASKRAY__trProject__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Baseline Long Name</label>
    <type>Text</type>
</CustomField>