force-app/main/default/objects/TASKRAY__trBaseline_Project__c/fields/TASKRAY__trPrimaryOnboardingContact__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trPrimaryOnboardingContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identifies the primary customer contact for onboarding.</description>
    <inlineHelpText>Use this field to identify the primary customer contact for onboarding.</inlineHelpText>
    <label>Primary Onboarding Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Primary Onboarding Contact (TaskRay Baselines)</relationshipLabel>
    <relationshipName>trPrimaryOnboardingProjectBaselines</relationshipName>
    <type>Lookup</type>
</CustomField>