force-app/main/default/objects/TASKRAY__trBaseline_Project__c/fields/TASKRAY__trProject__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trProject__c</fullName>
    <label>Project</label>
    <referenceTo>TASKRAY__Project__c</referenceTo>
    <relationshipLabel>TaskRay Baselines</relationshipLabel>
    <relationshipName>TaskRay_Baselines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>